# todo-axum

./: .env  Cargo.toml
migrations/: 20240314015841_create_todos_table.down.sql  20240314015841_create_todos_table.up.sql  20240315003609_create_users_table.up.sql
src/: db.rs  error.rs  main.rs  todo.rs  token.rs  user.rs
src/todo/: dto.rs  handler.rs  model.rs  repo.rs  route.rs
src/user/: dto.rs  handler.rs  model.rs  repo.rs  route.rs
