[package]
name = "todo-axum"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
argon2 = "0.5.3"
axum = "0.7.4"
chrono = "0.4.35"
dotenvy = "0.15.7"
redis = { version = "0.25.1", features = ["tokio-comp"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
